src/window.h

FFI_PLUGIN_EXPORT
void window_set_minimizable(long window_id, bool is_minimizable);
FFI_PLUGIN_EXPORT
bool window_is_minimizable(long window_id);
FFI_PLUGIN_EXPORT
void window_set_maximizable(long window_id, bool is_maximizable);
FFI_PLUGIN_EXPORT
bool window_is_maximizable(long window_id);
FFI_PLUGIN_EXPORT
void window_set_full_screenable(long window_id, bool is_full_screenable);
FFI_PLUGIN_EXPORT
bool window_is_full_screenable(long window_id);
FFI_PLUGIN_EXPORT
void window_set_closable(long window_id, bool is_closable);
FFI_PLUGIN_EXPORT
bool window_is_closable(long window_id);
FFI_PLUGIN_EXPORT
void window_set_always_on_top(long window_id, bool is_always_on_top);
FFI_PLUGIN_EXPORT
bool window_is_always_on_top(long window_id);
FFI_PLUGIN_EXPORT
void window_set_position(long window_id, struct NativePoint point);
FFI_PLUGIN_EXPORT
struct NativePoint window_get_position(long window_id);
FFI_PLUGIN_EXPORT
void window_set_title(long window_id, const char* title);
FFI_PLUGIN_EXPORT
const char* window_get_title(long window_id);
FFI_PLUGIN_EXPORT
void window_set_has_shadow(long window_id, bool has_shadow);
FFI_PLUGIN_EXPORT
bool window_has_shadow(long window_id);
FFI_PLUGIN_EXPORT
void window_set_opacity(long window_id, float opacity);
FFI_PLUGIN_EXPORT
float window_get_opacity(long window_id);
FFI_PLUGIN_EXPORT
void window_set_visible_on_all_workspaces(long window_id,
                                          bool is_visible_on_all_workspaces);
FFI_PLUGIN_EXPORT
bool window_is_visible_on_all_workspaces(long window_id);
FFI_PLUGIN_EXPORT
void window_set_ignore_mouse_events(long window_id,
                                    bool is_ignore_mouse_events);
FFI_PLUGIN_EXPORT
bool window_is_ignore_mouse_events(long window_id);
FFI_PLUGIN_EXPORT
void window_set_focusable(long window_id, bool is_focusable);
FFI_PLUGIN_EXPORT
bool window_is_focusable(long window_id);
FFI_PLUGIN_EXPORT
void window_start_dragging(long window_id);
FFI_PLUGIN_EXPORT
void window_start_resizing(long window_id);
FFI_PLUGIN_EXPORT
void window_start_listening(long window_id);
FFI_PLUGIN_EXPORT
void window_stop_listening(long window_id);