lib/src/ffi/bindings_generated.dart


  late final _window_set_minimizablePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Bool)>>(
          'window_set_minimizable');
  late final _window_set_minimizable =
      _window_set_minimizablePtr.asFunction<void Function(int, bool)>();

  bool window_is_minimizable(
    int window_id,
  ) {
    return _window_is_minimizable(
      window_id,
    );
  }

  late final _window_is_minimizablePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_minimizable');
  late final _window_is_minimizable =
      _window_is_minimizablePtr.asFunction<bool Function(int)>();

  void window_set_maximizable(
    int window_id,
    bool is_maximizable,
  ) {
    return _window_set_maximizable(
      window_id,
      is_maximizable,
    );
  }

  late final _window_set_maximizablePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Bool)>>(
          'window_set_maximizable');
  late final _window_set_maximizable =
      _window_set_maximizablePtr.asFunction<void Function(int, bool)>();

  bool window_is_maximizable(
    int window_id,
  ) {
    return _window_is_maximizable(
      window_id,
    );
  }

  late final _window_is_maximizablePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_maximizable');
  late final _window_is_maximizable =
      _window_is_maximizablePtr.asFunction<bool Function(int)>();

  void window_set_full_screenable(
    int window_id,
    bool is_full_screenable,
  ) {
    return _window_set_full_screenable(
      window_id,
      is_full_screenable,
    );
  }

  late final _window_set_full_screenablePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Bool)>>(
          'window_set_full_screenable');
  late final _window_set_full_screenable =
      _window_set_full_screenablePtr.asFunction<void Function(int, bool)>();

  bool window_is_full_screenable(
    int window_id,
  ) {
    return _window_is_full_screenable(
      window_id,
    );
  }

  late final _window_is_full_screenablePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_full_screenable');
  late final _window_is_full_screenable =
      _window_is_full_screenablePtr.asFunction<bool Function(int)>();

  void window_set_closable(
    int window_id,
    bool is_closable,
  ) {
    return _window_set_closable(
      window_id,
      is_closable,
    );
  }

  late final _window_set_closablePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Bool)>>(
          'window_set_closable');
  late final _window_set_closable =
      _window_set_closablePtr.asFunction<void Function(int, bool)>();

  bool window_is_closable(
    int window_id,
  ) {
    return _window_is_closable(
      window_id,
    );
  }

  late final _window_is_closablePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_closable');
  late final _window_is_closable =
      _window_is_closablePtr.asFunction<bool Function(int)>();

  void window_set_always_on_top(
    int window_id,
    bool is_always_on_top,
  ) {
    return _window_set_always_on_top(
      window_id,
      is_always_on_top,
    );
  }

  late final _window_set_always_on_topPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Bool)>>(
          'window_set_always_on_top');
  late final _window_set_always_on_top =
      _window_set_always_on_topPtr.asFunction<void Function(int, bool)>();

  bool window_is_always_on_top(
    int window_id,
  ) {
    return _window_is_always_on_top(
      window_id,
    );
  }

  late final _window_is_always_on_topPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_always_on_top');
  late final _window_is_always_on_top =
      _window_is_always_on_topPtr.asFunction<bool Function(int)>();

  void window_set_position(
    int window_id,
    NativePoint point,
  ) {
    return _window_set_position(
      window_id,
      point,
    );
  }

  late final _window_set_positionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, NativePoint)>>(
          'window_set_position');
  late final _window_set_position =
      _window_set_positionPtr.asFunction<void Function(int, NativePoint)>();

  NativePoint window_get_position(
    int window_id,
  ) {
    return _window_get_position(
      window_id,
    );
  }

  late final _window_get_positionPtr =
      _lookup<ffi.NativeFunction<NativePoint Function(ffi.Long)>>(
          'window_get_position');
  late final _window_get_position =
      _window_get_positionPtr.asFunction<NativePoint Function(int)>();

  void window_set_title(
    int window_id,
    ffi.Pointer<ffi.Char> title,
  ) {
    return _window_set_title(
      window_id,
      title,
    );
  }

  late final _window_set_titlePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Long, ffi.Pointer<ffi.Char>)>>(
      'window_set_title');
  late final _window_set_title = _window_set_titlePtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> window_get_title(
    int window_id,
  ) {
    return _window_get_title(
      window_id,
    );
  }

  late final _window_get_titlePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Long)>>(
          'window_get_title');
  late final _window_get_title =
      _window_get_titlePtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  void window_set_has_shadow(
    int window_id,
    bool has_shadow,
  ) {
    return _window_set_has_shadow(
      window_id,
      has_shadow,
    );
  }

  late final _window_set_has_shadowPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Bool)>>(
          'window_set_has_shadow');
  late final _window_set_has_shadow =
      _window_set_has_shadowPtr.asFunction<void Function(int, bool)>();

  bool window_has_shadow(
    int window_id,
  ) {
    return _window_has_shadow(
      window_id,
    );
  }

  late final _window_has_shadowPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_has_shadow');
  late final _window_has_shadow =
      _window_has_shadowPtr.asFunction<bool Function(int)>();

  void window_set_opacity(
    int window_id,
    double opacity,
  ) {
    return _window_set_opacity(
      window_id,
      opacity,
    );
  }

  late final _window_set_opacityPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Float)>>(
          'window_set_opacity');
  late final _window_set_opacity =
      _window_set_opacityPtr.asFunction<void Function(int, double)>();

  double window_get_opacity(
    int window_id,
  ) {
    return _window_get_opacity(
      window_id,
    );
  }

  late final _window_get_opacityPtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Long)>>(
          'window_get_opacity');
  late final _window_get_opacity =
      _window_get_opacityPtr.asFunction<double Function(int)>();

  void window_set_visible_on_all_workspaces(
    int window_id,
    bool is_visible_on_all_workspaces,
  ) {
    return _window_set_visible_on_all_workspaces(
      window_id,
      is_visible_on_all_workspaces,
    );
  }

  late final _window_set_visible_on_all_workspacesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Bool)>>(
          'window_set_visible_on_all_workspaces');
  late final _window_set_visible_on_all_workspaces =
      _window_set_visible_on_all_workspacesPtr
          .asFunction<void Function(int, bool)>();

  bool window_is_visible_on_all_workspaces(
    int window_id,
  ) {
    return _window_is_visible_on_all_workspaces(
      window_id,
    );
  }

  late final _window_is_visible_on_all_workspacesPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_visible_on_all_workspaces');
  late final _window_is_visible_on_all_workspaces =
      _window_is_visible_on_all_workspacesPtr.asFunction<bool Function(int)>();

  void window_set_ignore_mouse_events(
    int window_id,
    bool is_ignore_mouse_events,
  ) {
    return _window_set_ignore_mouse_events(
      window_id,
      is_ignore_mouse_events,
    );
  }

  late final _window_set_ignore_mouse_eventsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Bool)>>(
          'window_set_ignore_mouse_events');
  late final _window_set_ignore_mouse_events =
      _window_set_ignore_mouse_eventsPtr.asFunction<void Function(int, bool)>();

  bool window_is_ignore_mouse_events(
    int window_id,
  ) {
    return _window_is_ignore_mouse_events(
      window_id,
    );
  }

  late final _window_is_ignore_mouse_eventsPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_ignore_mouse_events');
  late final _window_is_ignore_mouse_events =
      _window_is_ignore_mouse_eventsPtr.asFunction<bool Function(int)>();

  void window_set_focusable(
    int window_id,
    bool is_focusable,
  ) {
    return _window_set_focusable(
      window_id,
      is_focusable,
    );
  }

  late final _window_set_focusablePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long, ffi.Bool)>>(
          'window_set_focusable');
  late final _window_set_focusable =
      _window_set_focusablePtr.asFunction<void Function(int, bool)>();

  bool window_is_focusable(
    int window_id,
  ) {
    return _window_is_focusable(
      window_id,
    );
  }

  late final _window_is_focusablePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Long)>>(
          'window_is_focusable');
  late final _window_is_focusable =
      _window_is_focusablePtr.asFunction<bool Function(int)>();

  void window_start_dragging(
    int window_id,
  ) {
    return _window_start_dragging(
      window_id,
    );
  }

  late final _window_start_draggingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>(
          'window_start_dragging');
  late final _window_start_dragging =
      _window_start_draggingPtr.asFunction<void Function(int)>();

  void window_start_resizing(
    int window_id,
  ) {
    return _window_start_resizing(
      window_id,
    );
  }

  late final _window_start_resizingPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>(
          'window_start_resizing');
  late final _window_start_resizing =
      _window_start_resizingPtr.asFunction<void Function(int)>();

  void window_start_listening(
    int window_id,
  ) {
    return _window_start_listening(
      window_id,
    );
  }

  late final _window_start_listeningPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>(
          'window_start_listening');
  late final _window_start_listening =
      _window_start_listeningPtr.asFunction<void Function(int)>();

  void window_stop_listening(
    int window_id,
  ) {
    return _window_stop_listening(
      window_id,
    );
  }

  late final _window_stop_listeningPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Long)>>(
          'window_stop_listening');
  late final _window_stop_listening =
      _window_stop_listeningPtr.asFunction<void Function(int)>();
}

/// Display orientation enumeration
enum native_display_orientation_t {
  NATIVE_DISPLAY_ORIENTATION_PORTRAIT(0),
  NATIVE_DISPLAY_ORIENTATION_LANDSCAPE(90),
  NATIVE_DISPLAY_ORIENTATION_PORTRAIT_FLIPPED(180),
  NATIVE_DISPLAY_ORIENTATION_LANDSCAPE_FLIPPED(270);

  final int value;
  const native_display_orientation_t(this.value);

  static native_display_orientation_t fromValue(int value) => switch (value) {
        0 => NATIVE_DISPLAY_ORIENTATION_PORTRAIT,
        90 => NATIVE_DISPLAY_ORIENTATION_LANDSCAPE,
        180 => NATIVE_DISPLAY_ORIENTATION_PORTRAIT_FLIPPED,
        270 => NATIVE_DISPLAY_ORIENTATION_LANDSCAPE_FLIPPED,
        _ => throw ArgumentError(
            "Unknown value for native_display_orientation_t: $value"),
      };
}
